# fs-embed

./: Cargo.toml  README.md
fs-embed/: Cargo.toml  LICENSE-APACHE  README.md
fs-embed-macros/: Cargo.toml  LICENSE-APACHE  README.md
fs-embed-macros/src/: lib.rs
fs-embed/src/: lib.rs
fs-embed/tests/: embedded.rs  lib.rs  macro.rs
fs-embed/tests/data/: alpha.txt  beta.txt
fs-embed/tests/data/override/: alpha.txt  epsilon.txt
fs-embed/tests/data/subdir/: delta.txt  gamma.txt
fs-embed/tests/data/subdir/subsubdir/: zeta.txt
rust-silos/: Cargo.toml  README.md
rust-silos-macros/: Cargo.toml
rust-silos-macros/src/: lib.rs
rust-silos/src/: lib.rs
rust-silos/tests/: silo.rs
