[workspace]
members = [
    "fs-embed",
    "fs-embed-macros",
    "rust-silos",
    "rust-silos-macros",

]
resolver = "3"

[workspace.package]
version = "0.2"
edition = "2024"
authors = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/vivsh/fs-embed"
description = "Embed files in release, read from disk in debug — with a unified API."

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

