

[package]
name = "fs-embed"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description.workspace = true
readme = "../README.md"
homepage = "https://github.com/vivsh/fs-embed"
documentation = "https://docs.rs/fs-embed"
categories = ["filesystem", "embedded"]
keywords = ["embed", "filesystem", "assets", "include_dir", "static"]
exclude = ["tests/*", "examples/*"]

[dependencies]
fs-embed-macros = "0.1"
include_dir = {version = "0.7.4", features=[ "metadata" ]}
tempfile = "3.20.0"
