


[package]
name = "fs-embed"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Embed files in release, read from disk in debug — with a unified API."
readme = "README.md"
homepage = "https://github.com/vivsh/fs-embed"
documentation = "https://docs.rs/fs-embed"
categories = ["filesystem", "embedded"]
keywords = ["embed", "filesystem", "assets", "include_dir", "static"]
exclude = ["tests/*", "examples/*"]


[features]
default = ["std"]
std = []

[dependencies]
fs-embed-macros = { version.workspace = true }
include_dir = {version = "0.7.4", features=[ "metadata" ]}
phf = "0.11"
walkdir = "2.4"
tempfile = "3.20.0"
thiserror = "2.0.12"
