
[package]
name = "rust-silos"
version = "0.1.0"
edition = "2021"
description = "Minimal, robust file embedding for Rust. Efficient, allocation-free, and reliable."
license = "MIT OR Apache-2.0"
repository = "https://github.com/vivsh/fs-embed"
categories = ["filesystem", "no-std", "embedded", "development-tools::build-utils"]
keywords = ["embed", "filesystem", "include_bytes", "static", "assets"]


[dependencies]
thiserror = "1.0"
phf = { version = "0.11", features = ["macros"] }
walkdir = "2.4"
rust-silos-macros = { version = "0.1", path = "../rust-silos-macros" }


[dev-dependencies]
tempfile = "3.10"
